--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 
-xcodebuild -workspace SPYCollectionController.xcworkspace -scheme {SPYCollectionController} -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+xcodebuild -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
