--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c
 
+before_install: gem install cocoapods
+
 script: xcodebuild -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
