--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: objective-c
 
 before_install: gem install cocoapods
 
-script: xcodebuild -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script:
+    -  xcodebuild -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+    -  xcodebuild test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
