--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ before_install: gem install cocoapods
 
 script:
     -  xctool -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-    -  xctool test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+    -  xcodebuild test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
