--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: objective-c
 
-before_install: gem install cocoapods
+before_install: 
+    -  gem install cocoapods
+    -  brew update
+    -  brew install xctool
 
 script:
     -  xctool -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-    -  xcodebuild test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+    -  xctool test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
