--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: objective-c
 before_install: 
     -  gem install cocoapods
     -  brew update
-    -  brew install xctool
+    -  brew install xctool --HEAD
 
 script:
     -  xctool -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
