--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
 
 script:
     -  xctool -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-    -  xctool test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+    -  xctool test -workspace SPYCollectionController.xcworkspace -scheme SPYCollectionController -sdk iphonesimulator7.0
